Ny boks er tilføjet af Ole

--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
             Denne besked kommer fra Signe Hau
         </h1>
     </div>
+	
+	<div class="box">
+        <h1>
+          Ole har tilføjet en ny box med denne besked
+        </h1>
+    </div>
 </body>
 </html>
