Signe har tilføjet endnu en box

--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@
           Ole har tilføjet en ny box med denne besked
         </h1>
     </div>
+
+    <div class="box">
+        <h1>
+          Signe har tilføjet en ny box med ny besked
+        </h1>
+    </div>
 </body>
 </html>
