Sidste  boks er tilføjet af Ole

--- a/index.html
+++ b/index.html
@@ -23,5 +23,11 @@
           Signe har tilføjet en ny box med ny besked
         </h1>
     </div>
+	
+	<div class="box">
+        <h1>
+          Ole har tilføjet den sidste box
+        </h1>
+    </div>
 </body>
 </html>
