Undersiden er løst - ny er kommet på

--- a/underside.html
+++ b/underside.html
@@ -3,31 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dette er en øvelse i at bruge github</title>
+    <title>Undersiden til vores projekt</title>
 </head>
 <body>
     <div class="box">
-        <h1>
-            Denne besked kommer fra Signe Hau
-        </h1>
-    </div>
-	
-	<div class="box">
-        <h1>
-          Ole har tilføjet en ny box med denne besked
-        </h1>
-    </div>
-
-    <div class="box">
-        <h1>
-          Signe har tilføjet en ny box med ny besked
-        </h1>
-    </div>
-	
-	<div class="box">
-        <h1>
-          Ole har tilføjet den sidste box
-        </h1>
+        <h1>Dette er vores Undersiden</h1>
     </div>
 </body>
 </html>
